fix for text field length on mobile

--- a/css/dco-theme-12-alpha-default.css
+++ b/css/dco-theme-12-alpha-default.css
@@ -111,6 +111,10 @@
   background: url(images/background-720.png) repeat-y center center;
 }
 
+input[type="text"] {
+  width: auto;
+}
+
 /**************************************************
 *** Content Zone
 **************************************************/
