--- a/css/global.css
+++ b/css/global.css
@@ -95,6 +95,10 @@ h1#page-title {
   margin-top: 10px;
 }
 
+input[type="text"] {
+  width: 100%;
+}
+
 /**************************************************
 *** tables
 **************************************************/
